--- a/body_test.html
+++ b/body_test.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>TensorFlow.js Image Classification</title>
-		<script src="js/p5.min.js"></script>
-		<script src="js/ml5.min.js"></script>
+		<script src="https://bpo.neusoft.com/test/body_test/js/p5.min.js"></script>
+		<script src="https://bpo.neusoft.com/test/body_test/js/ml5.min.js"></script>
 	</head>
 	<body>
 		<script>
