--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				} else {
 					messageBox.style.display = 'none'; // 隐藏提示框
 				}
-				document.getElementById('z_text').textContent = ballPositionY;
+				document.getElementById('z_text').textContent = beta;
 			}
 
 			// 检查是否需要请求权限
