--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				} else {
 					messageBox.style.display = 'none'; // 隐藏提示框
 				}
-				document.getElementById('z_text').textContent = clampedBallPositionY;
+				document.getElementById('z_text').textContent = '水平：' + beta + ';' + '高度：' + containerHeight + '；' + '范围：' + ballPositionY + '；' + '球球：' + clampedBallPositionY;
 			}
 
 			// 检查是否需要请求权限
