--- a/index.html
+++ b/index.html
@@ -79,12 +79,6 @@
 	<body>
 
 		<div class="container">
-			<div id="z_text" style="position: absolute;left: 0;top: 0;">
-				水平：<span id="z_text1"></span>；<br>
-				高度：<span id="z_text2"></span>；<br>
-				范围：<span id="z_text3"></span>；<br>
-				球球：<span id="z_text4"></span>；
-			</div>
 			<div class="fixed-ball"></div>
 			<div class="moving-ball" id="movingBall"></div>
 			<button id="permissionButton">启用设备方向</button>
@@ -125,7 +119,7 @@
 				const beta = event.beta; // 获取设备的俯仰角，范围是 [-180, 180]
 
 				// 调整beta的范围，以确保当beta接近0时，小球处于页面中间
-				const ballPositionY = (0 + beta) * (containerHeight - 60) / 180; // 修正移动范围
+				const ballPositionY = (0 - beta) * (containerHeight - 60) / 180; // 修正移动范围
 
 				// 限制小球移动范围，防止超出容器 
 				const clampedBallPositionY = Math.max(0, Math.min(ballPositionY, containerHeight - 60));
@@ -139,10 +133,6 @@
 				} else {
 					messageBox.style.display = 'none'; // 隐藏提示框
 				}
-				document.getElementById('z_text1').textContent = beta;
-				document.getElementById('z_text2').textContent = containerHeight;
-				document.getElementById('z_text3').textContent = ballPositionY;
-				document.getElementById('z_text4').textContent = clampedBallPositionY;
 			}
 
 			// 检查是否需要请求权限
